--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Surglab/vue-record",
+  "name": "vue-record",
   "version": "0.0.3",
   "main": "dist/VueRecord.umd.js",
   "scripts": {
