--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vue-cli-service build --target lib --name VueRecord src/components/index.js",
     "build:demo": "vue-cli-service build --dest demo",
     "publish:demo": "git subtree push --prefix demo origin gh-pages",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "npm run build"
   },
   "files": [
     "dist"
